--- a/public/index.css
+++ b/public/index.css
@@ -27,14 +27,122 @@ body {
 }
 .main-content-container .user-input-container {
   display: flex;
-  margin: 5px;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin: 5px;
   height: 100%;
   width: 100%;
   border: 2px solid white;
   border-radius: 8px;
+}
+.main-content-container .user-input-container .user-input-field-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+.main-content-container .user-input-container .user-input-field-container input {
+  width: 75%;
+  height: 40px;
+  border-radius: 10px;
+}
+.main-content-container .user-input-container .user-input-field-container p {
+  color: white;
+  font-size: 30px;
+}
+.main-content-container .user-input-container .user-input-result-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+.main-content-container .user-input-container .user-input-result-container #tweet-analysis-button {
+  width: 220px;
+  height: 50px;
+  border: none;
+  outline: none;
+  color: #fff;
+  background: #151a21;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  font-size: 20px;
+  margin-bottom: 40px;
+}
+.main-content-container .user-input-container .user-input-result-container #tweet-analysis-button:before {
+  content: '';
+  background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing 20s linear infinite;
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+.main-content-container .user-input-container .user-input-result-container #tweet-analysis-button:active {
+  color: #000;
+}
+.main-content-container .user-input-container .user-input-result-container #tweet-analysis-button:active:after {
+  background: transparent;
+}
+.main-content-container .user-input-container .user-input-result-container #tweet-analysis-button:hover:before {
+  opacity: 1;
+}
+.main-content-container .user-input-container .user-input-result-container #tweet-analysis-button:after {
+  z-index: -1;
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #111;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+@keyframes glowing {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+.main-content-container .user-input-container .tweet-sentiment-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100px;
+}
+.main-content-container .user-input-container .tweet-sentiment-container p {
+  color: white;
+  font-size: 25px;
+  margin: 0;
+  padding: 10px;
+}
+.main-content-container .user-input-container .tweet-sentiment-container .NEGATIVE span {
+  color: firebrick;
+}
+.main-content-container .user-input-container .tweet-sentiment-container .POSITIVE span {
+  color: lime;
+}
+.main-content-container .user-input-container .tweet-sentiment-container .NEUTRAL span {
+  color: #dada00;
 }
 .main-content-container .tweet-analysis-container {
   display: flex;
